--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="hero-content">
             <h1>Tawa. Tangis. Keseruan. Temukan semuanya di EN-FLIX</h1>
             <p>Watch unlimited movies and TV shows with enha enha ypen!!!.</p>
-            <button id="startButton">Get Started</button>
+            <a href="login.html"><button id="startButton">Get Started</button></a>
         </div>
     </div>
     <div class="footer">
@@ -57,13 +57,13 @@
         </div><br><br>
         <div class="category" id="enhypenDiary">
           <img src="https://i.pinimg.com/564x/c3/e0/60/c3e060ec8c26e219f7af580ececea9a8.jpg" alt="Enhypen Diary Cover">
-          <h2>Enhypen Diary</h2>
-          <p>Explore the daily lives of Enhypen Members.</p>
+          <h2>Engene-Flix</h2>
+          <p>Exclusive content for Engenes.</p>
       </div>
       <div class="category" id="engeneFlix">
           <img src="https://i.pinimg.com/564x/96/8c/a1/968ca1f69be562e874760c672be1e88f.jpg" alt="Engene-flix Cover">
-          <h2>Engene-Flix</h2>
-          <p>Exclusive content for Engenes.</p>
+          <h2>Engene-SoSoFun</h2>
+          <p>Get ready for a wild ride with exclusive content for Engenes.</p>
       </div>
     </div>
 </body>
