--- a/index.html
+++ b/index.html
@@ -18,16 +18,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">categories</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
+              <a class="nav-link" href="#">Engene-Account</a>
           </li>
       </ul>
   </div>
@@ -65,6 +62,24 @@
           <h2>Engene-SoSoFun</h2>
           <p>Get ready for a wild ride with exclusive content for Engenes.</p>
       </div>
+    </div>
+    <div class="contact-container">
+        <h2>Contact Us</h2>
+        <form action="contact_process.php" method="post">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" class="form-control" rows="4" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
     </div>
 </body>
 </html>
