--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <p>Exclusive content for Engenes.</p>
         </div><br><br>
         <div class="category" id="enhypenDiary">
-          <img src="https://i.pinimg.com/564x/c3/e0/60/c3e060ec8c26e219f7af580ececea9a8.jpg" alt="Enhypen Diary Cover">
-          <h2>Engene-Flix</h2>
-          <p>Exclusive content for Engenes.</p>
+          <img src="https://i.pinimg.com/564x/c3/e0/60/c3e060ec8c26e219f7af580ececea9a8.jpg" alt="Enhypen Song Cover">
+          <h2>Engene-Song</h2>
+          <p>Discover the music journey of Enhypen members.</p>
       </div>
       <div class="category" id="engeneFlix">
           <img src="https://i.pinimg.com/564x/96/8c/a1/968ca1f69be562e874760c672be1e88f.jpg" alt="Engene-flix Cover">
