--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="contact-container">
-        <h2>Contact Us</h2>
+        <h2>Send us your suggestions y'all</h2>
         <form action="contact_process.php" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
